# local-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: app.py  main.py
app/api/: dependencies.py  router.py
app/api/routes/: query.py
app/api/schemas/: query.py
app/classification/artifacts/: section_classifier_v10.joblib
app/classification/section/: classifier.py  trainer.py
app/core/: lifespan.py  logging.py  services.py
app/core/config/: dataset_generation_config.py  embedding_config.py  env_settings.py  experiment_config.py  json_loader.py
app/db/: base.py  session.py
app/db/models/: __init__.py  chunk.py  document.py  embedding.py  source.py
app/db/repositories/: chunks.py  documents.py  embeddings.py  sources.py
app/evaluation/: artifacts.py
app/evaluation/dataset/: generator.py  loader.py
app/evaluation/domain/: dto.py
app/ingestion/: batch_ingest.py  ingest_documents.py  ingest_service.py  processing_pipeline.py
app/ingestion/chunkers/: base.py  (+1 more)
app/llm/: base.py  http.py
app/prompting/: registry.py
app/reranking/: base.py  section_boost.py
app/retrieval/: base.py  hybrid.py  lexical.py  semantic.py
app/storage/: base.py  local.py
app/utils/: hashing.py  json_io.py
migrations/: env.py
migrations/versions/: 1c3500c62171_init_schema.py  f365ea17daa5_384_to_768_vector_dimension.py
scripts/: generate_dataset.py  ingest_local.py  run_agent.py  run_evaluation.py  run_experiment.py  train_section_classifier.py
tests/mocks/: mock_chunk_repo.py  mock_llm.py
(+153 files in other folders)
