[tool.poetry]
name = "rag-llm"
version = "0.1.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

fastapi = "^0.135.1"
uvicorn = "^0.41.0"

sqlalchemy = "^2.0"
asyncpg = "^0.30"
pgvector = "^0.3.6"
alembic = "^1.17"

pydantic = "^2.12"
pydantic-settings = "^2.12"

python-dotenv = "^1.0"

sentence-transformers = "^5.1.0"

torch = { version = "^2.7.0", source = "pytorch-cpu" }

pypdf = "^6.5.0"
aiofiles = "^25.1.0"
langchain-text-splitters = "^1.1.0"

matplotlib = "^3.10.8"
seaborn = "^0.13.2"

numpy = "^2.4.4"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"